# domains

./: .directory  .gitignore  clusterize_BVGMM copy.ipynb  clusterize_BVGMM.ipynb  clusterize_GMM.ipynb  clusterize_GMM.py  clusterize_batch.py  config.yaml  cvat_interface.py  dummy.py  dummy_cvat.ipynb  map_region.py  ppcx_inference_func.py  ppcx_inference_loop.py  ppcx_mcmc_clustering.py  ppcx_mcmc_multiscale.ipynb  ppcx_models.py  ppcx_postproc_func.py  ppcx_pymc_func.py  ppcx_pymc_inference.ipynb  ppcx_pymc_inference_func.py  ppcx_pymc_inference_loop.py  ppcx_pymc_mcmc_pooled.ipynb  ppcx_pymc_pooled_mcmc.ipynb  ppcx_pymc_pooled_mcmc_marginalized.ipynb  ppcx_pymc_sample_new_data.ipynb  ppcx_pymc_sandbox.1.ipynb  ppcx_pymc_sandbox.ipynb  pymc_sandbox_mcmc.ipynb  pyproject.toml  sandbox.ipynb
deprecated/: ppcx_inference_loop.py  ppcx_mcmc_clustering.py
notebooks/: get_data_simple.ipynb
scripts/: get_db_data.ipynb  map_region.py
src/: config.py  database.py  logger.py  preprocessing.py  roi.py
src/ppcluster/: __init__.py  config.py  cvat.py  database.py  discontinuity.py  gmm.py  griddata.py  mcmc.py  mksectors.py  preprocessing.py  roi.py  visualization.py
src/ppcluster/mcmc/: __init__.py  assignment.py  mcmc.py  models.py  postproc.py  priors.py
src/ppcluster/utils/: __init__.py  config.py  database.py
