[project]
name = "ppcx-domain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmcrameri>=1.9",
    "dotenv>=0.9.9",
    "exifread>=3.3.1",
    "graphviz>=0.21",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "joblib>=1.5.1",
    "matplotlib>=3.5.0",
    "numpy>=2.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3",
    "pillow>=10.0",
    "pip>=25.1.1",
    "psycopg2-binary>=2.9.0",
    "pymc>=5.25.1",
    "pyqt5>=5.15.11",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.66.1",
]
