[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ppcluster"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Francesco Ioli", email = "francescoioli@cnr.it" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arviz>=0.22.0",
    "cmcrameri>=1.9",
    "dotenv>=0.9.9",
    "exifread>=3.3.1",
    "graphviz>=0.21",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "joblib>=1.5.1",
    "matplotlib>=3.5.0",
    "numpy>=2.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3",
    "pillow>=10.0",
    "pip>=25.1.1",
    "psycopg2-binary>=2.9.0",
    "pymc>=5.25.1",
    "pyqt5>=5.15.11",
    "requests>=2.32.4",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.66.1",
]


[tool.hatch.build.targets.wheel]
packages = ["src/ppcluster"]

[tool.hatch.version]
path = "src/ppcluster/__init__.py"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/ppcluster/__init__.py" = ["{version}"]
